Acerto das configurações dos guerreiros