@@ -10,7 +10,7 @@ import java.util.ArrayList;
  *
  * @author João Miguel
  */
-public class DroideExterminador extends Guerreiro{
+public class DroideExterminador extends DarkSide{
     
     public DroideExterminador(String name, int age, double weight) {
         super(name, age, weight , 0);
@@ -22,7 +22,8 @@ public class DroideExterminador extends Guerreiro{
     }
     @Override
     public void attack(ArrayList<Guerreiro> Gs) {
-       Gs.getFirst().setHp(0);
-        System.out.println("\n\n>Guerreiro Droide "+ this.getName() + " MATOU o guerreiro " +Gs.getFirst().getClass().getSimpleName() +" "+Gs.get(0).getName() + "!!!");   
+        super.attack(Gs);
+        Gs.getFirst().setHp(0);
+        System.out.println("\n\n>Guerreiro Droide Exterminador"+ this.getName() + " MATOU o guerreiro " +Gs.getFirst().getClass().getSimpleName() +" "+Gs.get(0).getName() + "!!!");   
     }
 }
